--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <div class="skills-grid">
                     <!-- Python -->
                     <div class="skill-item">
-                        <i class="bi bi-file-code-fill skill-icon"></i>
+                        <img src="python.png" alt="Python" class="skill-icon" />
                         <p class="skill-name">Python</p>
                     </div>
                     
