--- a/index.html
+++ b/index.html
@@ -153,7 +153,11 @@
             }
             
             .skill-icon {
-                font-size: 2.2rem;
+                width: 50px;      /* ajuste conforme o tamanho dos outros ícones */
+                height: 50px;
+                object-fit: contain; /* impede deformação */
+                display: block;
+                margin: 0 auto 8px;  /* centraliza, se os outros ícones forem centralizados */
             }
             
             .skill-name {
