--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             }
             
             .skill-icon {
-                width: 50px;      /* ajuste conforme o tamanho dos outros ícones */
+                width: 100%;      /* ajuste conforme o tamanho dos outros ícones */
                 height: 50px;
                 object-fit: contain; /* impede deformação */
                 display: block;
