--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <div class="skills-grid">
                     <!-- Python -->
                     <div class="skill-item">
-                        <img src="python.png" alt="Python" class="skill-icon" />
+                        <img src="python.png" alt="Python" width="100%" />
                         <p class="skill-name">Python</p>
                     </div>
                     
