--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     
                     <!-- Django -->
                     <div class="skill-item">
-                        <i class="bi bi-gear-fill skill-icon"></i>
+                        <img src="django.png" alt="Python" width="100%" />
                         <p class="skill-name">Django</p>
                     </div>
                     
