--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     
                     <!-- Git -->
                     <div class="skill-item">
-                        <img src="git.jpeg" alt="Git" width="100%" />
+                        <img src="git.png" alt="Git" width="100%" />
                         <p class="skill-name">Git</p>
                     </div>
                     
