--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     
                     <!-- HTML5 -->
                     <div class="skill-item">
-                        <i class="bi bi-filetype-html skill-icon"></i>
+                        <img src="html.png" alt="Html" width="100%" />
                         <p class="skill-name">HTML5</p>
                     </div>
                     
