--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
     <section id="inicio" class="hero-section gradient-bg">
         <div class="container text-center">
             <img src="https://via.placeholder.com/200" alt="Foto de perfil" class="profile-img rounded-circle mb-4">
-            <h1 class="display-4 fw-bold mb-3">Seu Nome</h1>
-            <p class="lead mb-4">Desenvolvedor Full Stack | Especialista em [Sua Especialidade]</p>
+            <h1 class="display-4 fw-bold mb-3">Patrick Menegassi Walter</h1>
+            <p class="lead mb-4">Desenvolvedor Python</p>
             <a href="#projetos" class="btn btn-light btn-lg px-4">Ver Projetos</a>
         </div>
     </section>
@@ -241,10 +241,10 @@
                         <div class="card-body">
                             <h5 class="card-title">Informações Pessoais</h5>
                             <ul class="list-unstyled">
-                                <li class="mb-2"><strong>Nome:</strong> Seu Nome Completo</li>
-                                <li class="mb-2"><strong>Email:</strong> seu.email@exemplo.com</li>
-                                <li class="mb-2"><strong>Telefone:</strong> (11) 99999-9999</li>
-                                <li class="mb-2"><strong>Localização:</strong> Sua Cidade, Estado</li>
+                                <li class="mb-2"><strong>Nome:</strong> Patrick Menegassi Walter</li>
+                                <li class="mb-2"><strong>Email:</strong> patrick.menegassi.walter@gmail.com</li>
+                                <li class="mb-2"><strong>Telefone:</strong> (53) 99901-7190</li>
+                                <li class="mb-2"><strong>Localização:</strong> Pelotas, Rio Grande do Sul</li>
                                 <li class="mb-2"><strong>Disponibilidade:</strong> Tempo integral/Freelancer</li>
                             </ul>
                             <a href="#" class="btn btn-primary mt-3">Download CV</a>
@@ -341,12 +341,14 @@
                     <div class="card project-card shadow">
                         <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Projeto 1">
                         <div class="card-body">
-                            <h5 class="card-title">Sistema de E-commerce</h5>
-                            <p class="card-text">Plataforma completa de e-commerce com carrinho de compras, pagamento integrado e painel administrativo.</p>
+                            <h5 class="card-title">Sistema de Geranciamento de Hotéis</h5>
+                            <p class="card-text">Plataforma para gerenciamento de reservas de quartos de hotéis.</p>
                             <div class="mb-3">
-                                <span class="badge bg-primary">React</span>
-                                <span class="badge bg-secondary">Node.js</span>
-                                <span class="badge bg-success">MongoDB</span>
+                                <span class="badge bg-secondary">Python</span>
+                                <span class="badge bg-primary">Django</span>
+                                <span class="badge bg-success">Celery</span>
+                                <span class="badge bg-secondary">Docker</span>
+                                <span class="badge bg-primary">PostgreSQL</span>
                             </div>
                             <a href="#" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
@@ -357,12 +359,13 @@
                     <div class="card project-card shadow">
                         <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Projeto 2">
                         <div class="card-body">
-                            <h5 class="card-title">App de Tarefas</h5>
-                            <p class="card-text">Aplicativo web para gerenciamento de tarefas com funcionalidades de arrastar e soltar, categorias e lembretes.</p>
+                            <h5 class="card-title">Gerenciamento de quadras</h5>
+                            <p class="card-text">Aplicativo web para gerenciamento de quadras.</p>
                             <div class="mb-3">
+                                <span class="badge bg-primary">Python</span>
+                                <span class="badge bg-primary">Django</span>
                                 <span class="badge bg-primary">JavaScript</span>
-                                <span class="badge bg-secondary">Bootstrap</span>
-                                <span class="badge bg-success">LocalStorage</span>
+                                <span class="badge bg-primary">PostgreSQL</span>
                             </div>
                             <a href="#" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
@@ -383,55 +386,6 @@
                             <a href="#" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contato -->
-    <section id="contato" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="section-title">Entre em Contato</h2>
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <form>
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <label for="nome" class="form-label">Nome</label>
-                                <input type="text" class="form-control" id="nome" required>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="email" required>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="assunto" class="form-label">Assunto</label>
-                            <input type="text" class="form-control" id="assunto" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="mensagem" class="form-label">Mensagem</label>
-                            <textarea class="form-control" id="mensagem" rows="5" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
-                    </form>
-                </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-md-4 text-center mb-4">
-                    <i class="bi bi-envelope-fill contact-icon"></i>
-                    <h5>Email</h5>
-                    <p>seu.email@exemplo.com</p>
-                </div>
-                <div class="col-md-4 text-center mb-4">
-                    <i class="bi bi-telephone-fill contact-icon"></i>
-                    <h5>Telefone</h5>
-                    <p>(11) 99999-9999</p>
-                </div>
-                <div class="col-md-4 text-center mb-4">
-                    <i class="bi bi-geo-alt-fill contact-icon"></i>
-                    <h5>Localização</h5>
-                    <p>Sua Cidade, Estado</p>
                 </div>
             </div>
         </div>
