--- a/index.html
+++ b/index.html
@@ -399,10 +399,8 @@
                     <p>&copy; 2023 Seu Nome. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-end">
-                    <a href="#" class="text-white me-3"><i class="bi bi-linkedin"></i></a>
-                    <a href="#" class="text-white me-3"><i class="bi bi-github"></i></a>
-                    <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/patrick-menegassi" class="text-white me-3"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/PatrickMenegassi" class="text-white me-3"><i class="bi bi-github"></i></a>
                 </div>
             </div>
         </div>
