--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                 <li class="mb-2"><strong>Localização:</strong> Pelotas, Rio Grande do Sul</li>
                                 <li class="mb-2"><strong>Disponibilidade:</strong> Tempo integral/Freelancer</li>
                             </ul>
-                            <a href="#" class="btn btn-primary mt-3">Download CV</a>
+                            <a href="https://drive.google.com/file/d/19G09O1y3ftHzktRZ9I8CI4vAsUKURZz1/view?usp=sharing" class="btn btn-primary mt-3">Download CV</a>
                         </div>
                     </div>
                 </div>
