--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                 <li class="mb-2"><strong>Localização:</strong> Pelotas, Rio Grande do Sul</li>
                                 <li class="mb-2"><strong>Disponibilidade:</strong> Tempo integral/Freelancer</li>
                             </ul>
-                            <a href="https://drive.google.com/file/d/19G09O1y3ftHzktRZ9I8CI4vAsUKURZz1/view?usp=sharing" class="btn btn-primary mt-3">Download CV</a>
+                            <a href="https://drive.google.com/file/d/19G09O1y3ftHzktRZ9I8CI4vAsUKURZz1/view?usp=sharing" target="_blank" class="btn btn-primary mt-3">Download CV</a>
                         </div>
                     </div>
                 </div>
@@ -399,8 +399,8 @@
                     <p>&copy; 2023 Seu Nome. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-end">
-                    <a href="https://www.linkedin.com/in/patrick-menegassi" class="text-white me-3"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://github.com/PatrickMenegassi" class="text-white me-3"><i class="bi bi-github"></i></a>
+                    <a href="https://www.linkedin.com/in/patrick-menegassi" class="text-white me-3" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/PatrickMenegassi" class="text-white me-3" target="_blank"><i class="bi bi-github"></i></a>
                 </div>
             </div>
         </div>
