--- a/index.html
+++ b/index.html
@@ -307,13 +307,7 @@
                     <div class="skill-item">
                         <i class="bi bi-database skill-icon"></i>
                         <p class="skill-name">PostgreSQL</p>
-                    </div>
-                    
-                    <!-- Power BI -->
-                    <div class="skill-item">
-                        <i class="bi bi-bar-chart-line-fill skill-icon"></i>
-                        <p class="skill-name">Power BI</p>
-                    </div>
+                    </div>           
                     
                     <!-- Celery -->
                     <div class="skill-item">
@@ -344,10 +338,10 @@
                             <h5 class="card-title">Sistema de Geranciamento de Hotéis</h5>
                             <p class="card-text">Plataforma para gerenciamento de reservas de quartos de hotéis.</p>
                             <div class="mb-3">
-                                <span class="badge bg-secondary">Python</span>
+                                <span class="badge bg-primary">Python</span>
                                 <span class="badge bg-primary">Django</span>
-                                <span class="badge bg-success">Celery</span>
-                                <span class="badge bg-secondary">Docker</span>
+                                <span class="badge bg-primary">Celery</span>
+                                <span class="badge bg-primary">Docker</span>
                                 <span class="badge bg-primary">PostgreSQL</span>
                             </div>
                             <a href="#" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
@@ -380,8 +374,8 @@
                             <p class="card-text">Painel de controle com gráficos interativos para visualização de dados e métricas de negócio em tempo real.</p>
                             <div class="mb-3">
                                 <span class="badge bg-primary">Vue.js</span>
-                                <span class="badge bg-secondary">Firebase</span>
-                                <span class="badge bg-success">Chart.js</span>
+                                <span class="badge bg-primary">Firebase</span>
+                                <span class="badge bg-primary">Chart.js</span>
                             </div>
                             <a href="#" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
@@ -396,7 +390,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2023 Seu Nome. Todos os direitos reservados.</p>
+                    <p>&copy; 2025 Patrick Menegassi Walter. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-end">
                     <a href="https://www.linkedin.com/in/patrick-menegassi" class="text-white me-3" target="_blank"><i class="bi bi-linkedin"></i></a>
