--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero-section gradient-bg">
         <div class="container text-center">
-            <img src="https://via.placeholder.com/200" alt="Foto de perfil" class="profile-img rounded-circle mb-4">
+            <img src="foto_perfil.jpeg" alt="Foto de perfil" class="profile-img rounded-circle mb-4">
             <h1 class="display-4 fw-bold mb-3">Patrick Menegassi Walter</h1>
             <p class="lead mb-4">Desenvolvedor Python</p>
             <a href="#projetos" class="btn btn-light btn-lg px-4">Ver Projetos</a>
