--- a/index.html
+++ b/index.html
@@ -333,7 +333,6 @@
                 <!-- Projeto 1 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="card project-card shadow">
-                        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Projeto 1">
                         <div class="card-body">
                             <h5 class="card-title">Sistema de Geranciamento de Hotéis</h5>
                             <p class="card-text">Plataforma para gerenciamento de reservas de quartos de hotéis.</p>
@@ -344,14 +343,13 @@
                                 <span class="badge bg-primary">Docker</span>
                                 <span class="badge bg-primary">PostgreSQL</span>
                             </div>
-                            <a href="#" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+                            <a href="https://github.com/PatrickMenegassi/Sistema-Reserva-Hoteis" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
                 <!-- Projeto 2 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="card project-card shadow">
-                        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Projeto 2">
                         <div class="card-body">
                             <h5 class="card-title">Gerenciamento de quadras</h5>
                             <p class="card-text">Aplicativo web para gerenciamento de quadras.</p>
@@ -361,23 +359,24 @@
                                 <span class="badge bg-primary">JavaScript</span>
                                 <span class="badge bg-primary">PostgreSQL</span>
                             </div>
-                            <a href="#" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+                            <a href="https://github.com/PatrickMenegassi/AgendamentoQuadras" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
                 <!-- Projeto 3 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="card project-card shadow">
-                        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Projeto 3">
                         <div class="card-body">
-                            <h5 class="card-title">Dashboard Analytics</h5>
-                            <p class="card-text">Painel de controle com gráficos interativos para visualização de dados e métricas de negócio em tempo real.</p>
+                            <h5 class="card-title">Classificação de Vídeos no YouTube sobre urnas eletrônicas</h5>
+                            <p class="card-text">Classificação de vídeos sobre urnas eletrônicas em falso, verdadeiro ou neutro.</p>
                             <div class="mb-3">
-                                <span class="badge bg-primary">Vue.js</span>
-                                <span class="badge bg-primary">Firebase</span>
-                                <span class="badge bg-primary">Chart.js</span>
+                                <span class="badge bg-primary">Python</span>
+                                <span class="badge bg-primary">Sklearn</span>
+                                <span class="badge bg-primary">Nltk</span>
+                                <span class="badge bg-primary">Pytube</span>
+                                <span class="badge bg-primary">Whisper</span>
                             </div>
-                            <a href="#" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+                            <a href="https://github.com/PatrickMenegassi/TCC" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
