--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                 <span class="badge bg-primary">Docker</span>
                                 <span class="badge bg-primary">PostgreSQL</span>
                             </div>
-                            <a href="https://github.com/PatrickMenegassi/Sistema-Reserva-Hoteis" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+                            <a href="https://github.com/PatrickMenegassi/Sistema-Reserva-Hoteis" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
@@ -359,7 +359,7 @@
                                 <span class="badge bg-primary">JavaScript</span>
                                 <span class="badge bg-primary">PostgreSQL</span>
                             </div>
-                            <a href="https://github.com/PatrickMenegassi/AgendamentoQuadras" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+                            <a href="https://github.com/PatrickMenegassi/AgendamentoQuadras" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
@@ -376,7 +376,7 @@
                                 <span class="badge bg-primary">Pytube</span>
                                 <span class="badge bg-primary">Whisper</span>
                             </div>
-                            <a href="https://github.com/PatrickMenegassi/TCC" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+                            <a href="https://github.com/PatrickMenegassi/TCC" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
