--- a/index.html
+++ b/index.html
@@ -339,8 +339,10 @@
                             <div class="mb-3">
                                 <span class="badge bg-primary">Python</span>
                                 <span class="badge bg-primary">Django</span>
+                                <span class="badge bg-primary">JavaScript</span>
                                 <span class="badge bg-primary">Celery</span>
                                 <span class="badge bg-primary">Docker</span>
+                                <span class="badge bg-primary">Redis</span>
                                 <span class="badge bg-primary">PostgreSQL</span>
                             </div>
                             <a href="https://github.com/PatrickMenegassi/Sistema-Reserva-Hoteis" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
@@ -377,6 +379,19 @@
                                 <span class="badge bg-primary">Whisper</span>
                             </div>
                             <a href="https://github.com/PatrickMenegassi/TCC" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-lg-4">
+                    <div class="card project-card shadow">
+                        <div class="card-body">
+                            <h5 class="card-title">Trabalho de Computação Gráfica</h5>
+                            <p class="card-text">Trabalho para disciplina de Computação Gráfica na Universidade Federal de Pelotas.</p>
+                            <div class="mb-3">
+                                <span class="badge bg-primary">Javascript</span>
+                                <span class="badge bg-primary">WebGL</span>
+                            </div>
+                            <a href="https://github.com/PatrickMenegassi/TrabalhoCG" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
