--- a/index.html
+++ b/index.html
@@ -327,63 +327,81 @@
 
     <!-- Projetos -->
     <section id="projetos" class="py-5">
-        <div class="container">
-            <h2 class="section-title">Meus Projetos</h2>
-            <div class="row g-4">
-                <!-- Projeto 1 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="card project-card shadow">
-                        <div class="card-body">
-                            <h5 class="card-title">Sistema de Geranciamento de Hotéis</h5>
-                            <p class="card-text">Plataforma para gerenciamento de reservas de quartos de hotéis.</p>
-                            <div class="mb-3">
-                                <span class="badge bg-primary">Python</span>
-                                <span class="badge bg-primary">Django</span>
-                                <span class="badge bg-primary">JavaScript</span>
-                                <span class="badge bg-primary">Celery</span>
-                                <span class="badge bg-primary">Docker</span>
-                                <span class="badge bg-primary">Redis</span>
-                                <span class="badge bg-primary">PostgreSQL</span>
-                            </div>
-                            <a href="https://github.com/PatrickMenegassi/Sistema-Reserva-Hoteis" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+    <div class="container">
+        <h2 class="section-title">Meus Projetos</h2>
+        <div class="row g-4">
+            <!-- Projeto 1 -->
+            <div class="col-md-6 col-lg-4">
+                <div class="card project-card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">Sistema de Gerenciamento de Hotéis</h5>
+                        <p class="card-text">Plataforma para gerenciamento de reservas de quartos de hotéis.</p>
+                        <div class="mb-3">
+                            <span class="badge bg-primary">Python</span>
+                            <span class="badge bg-primary">Django</span>
+                            <span class="badge bg-primary">JavaScript</span>
+                            <span class="badge bg-primary">Celery</span>
+                            <span class="badge bg-primary">Docker</span>
+                            <span class="badge bg-primary">Redis</span>
+                            <span class="badge bg-primary">PostgreSQL</span>
                         </div>
+                        <a href="https://github.com/PatrickMenegassi/Sistema-Reserva-Hoteis" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                     </div>
                 </div>
-                <!-- Projeto 2 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="card project-card shadow">
-                        <div class="card-body">
-                            <h5 class="card-title">Gerenciamento de quadras</h5>
-                            <p class="card-text">Aplicativo web para gerenciamento de quadras.</p>
-                            <div class="mb-3">
-                                <span class="badge bg-primary">Python</span>
-                                <span class="badge bg-primary">Django</span>
-                                <span class="badge bg-primary">JavaScript</span>
-                                <span class="badge bg-primary">PostgreSQL</span>
-                            </div>
-                            <a href="https://github.com/PatrickMenegassi/AgendamentoQuadras" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+            </div>
+            <!-- Projeto 2 -->
+            <div class="col-md-6 col-lg-4">
+                <div class="card project-card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">Gerenciamento de quadras</h5>
+                        <p class="card-text">Aplicativo web para gerenciamento de quadras.</p>
+                        <div class="mb-3">
+                            <span class="badge bg-primary">Python</span>
+                            <span class="badge bg-primary">Django</span>
+                            <span class="badge bg-primary">JavaScript</span>
+                            <span class="badge bg-primary">PostgreSQL</span>
                         </div>
+                        <a href="https://github.com/PatrickMenegassi/AgendamentoQuadras" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                     </div>
                 </div>
-                <!-- Projeto 3 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="card project-card shadow">
-                        <div class="card-body">
-                            <h5 class="card-title">Classificação de Vídeos no YouTube sobre urnas eletrônicas</h5>
-                            <p class="card-text">Classificação de vídeos sobre urnas eletrônicas em falso, verdadeiro ou neutro.</p>
-                            <div class="mb-3">
-                                <span class="badge bg-primary">Python</span>
-                                <span class="badge bg-primary">Sklearn</span>
-                                <span class="badge bg-primary">Nltk</span>
-                                <span class="badge bg-primary">Pytube</span>
-                                <span class="badge bg-primary">Whisper</span>
-                            </div>
-                            <a href="https://github.com/PatrickMenegassi/TCC" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+            </div>
+            <!-- Projeto 3 -->
+            <div class="col-md-6 col-lg-4">
+                <div class="card project-card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">Classificação de Vídeos no YouTube sobre urnas eletrônicas</h5>
+                        <p class="card-text">Classificação de vídeos sobre urnas eletrônicas em falso, verdadeiro ou neutro.</p>
+                        <div class="mb-3">
+                            <span class="badge bg-primary">Python</span>
+                            <span class="badge bg-primary">Sklearn</span>
+                            <span class="badge bg-primary">Nltk</span>
+                            <span class="badge bg-primary">Pytube</span>
+                            <span class="badge bg-primary">Whisper</span>
                         </div>
+                        <a href="https://github.com/PatrickMenegassi/TCC" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                     </div>
+                </div>
+            </div>
+            <!-- PROJETO 4 - NOVO PROJETO ADICIONADO -->
+            <div class="col-md-6 col-lg-4">
+                <div class="card project-card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">Sistema de Análise de Dados</h5>
+                        <p class="card-text">Dashboard interativo para análise e visualização de dados empresariais.</p>
+                        <div class="mb-3">
+                            <span class="badge bg-primary">Python</span>
+                            <span class="badge bg-primary">Pandas</span>
+                            <span class="badge bg-primary">Plotly</span>
+                            <span class="badge bg-primary">Django</span>
+                            <span class="badge bg-primary">PostgreSQL</span>
+                        </div>
+                        <a href="https://github.com/PatrickMenegassi" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer class="text-white py-4">
