--- a/index.html
+++ b/index.html
@@ -386,16 +386,13 @@
             <div class="col-md-6 col-lg-4">
                 <div class="card project-card shadow">
                     <div class="card-body">
-                        <h5 class="card-title">Sistema de Análise de Dados</h5>
-                        <p class="card-text">Dashboard interativo para análise e visualização de dados empresariais.</p>
+                        <h5 class="card-title">Trabalho de Computação Gráfica</h5>
+                        <p class="card-text">Trabalho de Computação Gráfica da Univerisade Federal de Pelotas.</p>
                         <div class="mb-3">
-                            <span class="badge bg-primary">Python</span>
-                            <span class="badge bg-primary">Pandas</span>
-                            <span class="badge bg-primary">Plotly</span>
-                            <span class="badge bg-primary">Django</span>
-                            <span class="badge bg-primary">PostgreSQL</span>
+                            <span class="badge bg-primary">Javascript</span>
+                            <span class="badge bg-primary">WebGL</span>
                         </div>
-                        <a href="https://github.com/PatrickMenegassi" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+                        <a href="https://github.com/PatrickMenegassi/TrabalhoCG" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
                     </div>
                 </div>
             </div>
