--- a/index.html
+++ b/index.html
@@ -247,7 +247,18 @@
                                 <li class="mb-2"><strong>Localização:</strong> Pelotas, Rio Grande do Sul</li>
                                 <li class="mb-2"><strong>Disponibilidade:</strong> Tempo integral/Freelancer</li>
                             </ul>
-                            <a href="https://drive.google.com/file/d/19G09O1y3ftHzktRZ9I8CI4vAsUKURZz1/view?usp=sharing" target="_blank" class="btn btn-primary mt-3">Download CV</a>
+                            <div class="d-grid gap-2">
+                                <a href="https://drive.google.com/file/d/19G09O1y3ftHzktRZ9I8CI4vAsUKURZz1/view?usp=sharing" 
+                                   target="_blank" 
+                                   class="btn btn-primary">
+                                    <i class="bi bi-download me-2"></i>CV Português
+                                </a>
+                                <a href="https://drive.google.com/file/d/1VacnANbkUawvtAYoY73MCKEj2jILF5z3/view?usp=sharing" 
+                                   target="_blank" 
+                                   class="btn btn-outline-primary">
+                                    <i class="bi bi-download me-2"></i>English CV
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
