--- a/index.html
+++ b/index.html
@@ -404,6 +404,25 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-6 col-lg-4">
+                <div class="card project-card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">Workout API - FastAPI & PostgreSQL</h5>
+                        <p class="card-text">API completa para gerenciamento de academias, atletas e workouts com FastAPI.</p>
+                        <div class="mb-3">
+                            <span class="badge bg-primary">Python</span>
+                            <span class="badge bg-primary">FastAPI</span>
+                            <span class="badge bg-primary">PostgreSQL</span>
+                            <span class="badge bg-primary">Docker</span>
+                            <span class="badge bg-primary">Uvicorn</span>
+                            <span class="badge bg-primary">SQLAlchemy</span>
+                            <span class="badge bg-primary">Alembic</span>
+                        </div>
+                        <a href="https://github.com/PatrickMenegassi/FastApiProject" target="_blank" class="btn btn-outline-primary btn-sm">Ver Detalhes</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
